# sesh

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml
src/: App.tsx  api.ts  detach.test.ts  detach.ts  domain.test.ts  domain.ts  files.ts  main.tsx  shortcuts.test.ts  shortcuts.ts  styles.css  terminalRegistry.ts  terminalTransport.test.ts  terminalTransport.ts  themes.test.ts  themes.ts  toast.test.ts  toast.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  secrets.rs  ssh.rs  terminal_transport.rs
src/components/: MachineEditor.tsx  Modal.tsx  SettingsPanel.tsx  TerminalPane.tsx  ThemeEditor.tsx  ToastHost.tsx
