[package]
name = "sesh"
version = "0.1.0"
description = "A focused, customizable SSH client"
authors = ["sesh contributors"]
edition = "2024"

[lib]
name = "sesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
keyring = { version = "4.1", features = ["v1"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util"] }
russh = "0.62"
thiserror = "2"
dirs = "6"
base64 = "0.22"
tracing = "0.1"
tokio-tungstenite = "0.28"
futures-util = "0.3"
rand = "0.9"
